--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
     {% for pages in site.pages %}
         {% if pages.title != "Home" %}
             <span class="separator">&bull;</span>
-            <a href="{{ site.baseurl }}{{ pages.permalink }}">{{ pages.title }}</a>
+            <a href="{{ site.baseurl }}{{ pages.permalink }}">Contact Us</a>
         {% endif %}
     {% endfor %}
     {% if site.github %}
